--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:vscode-calendar.helloWorld"
+    "onCommand:vscode-calendar.helloWorld",
+    "onWebviewPanel:vscode-pomodoro",
+    "onView:vscode-pomodoro"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "contributes": {
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "vscode-calendar",
-          "title": "VsCode Calendar",
-          "icon": "/resources/light/calendar-icon.png"
+          "id": "vscode-pomodoro",
+          "title": "VsCode Pomodoro",
+          "icon": "resources/light/lightbulb.svg"
         }
       ]
     },
     "views": {
-      "explorer": [
+      "vscode-pomodoro": [
         {
-          "id": "vscodeCalendar",
-          "name": "VsCode Calendar"
+          "type": "webview",
+          "id": "vscode-pomodoro",
+          "name": "VsCode Pomodoro",
+          "icon": "resources/light/lightbulb.svg"
         }
       ]
     },
@@ -35,13 +39,19 @@
       {
         "command": "vscode-calendar.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "vscode-calendar.helloWorld2",
+        "title": "Hello World2"
       }
     ]
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
-    "watch": "webpack --watch",
+    "watch": "run-p watch:*",
+    "watch:ts": "tsc -watch -p ./ ",
+    "watch:svelte": "rollup -c -w",
     "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
@@ -50,19 +60,34 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.68.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.4",
+    "@tsconfig/svelte": "^2.0.1",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.68.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "@vscode/test-electron": "^2.1.3",
     "eslint": "^8.16.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.2",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^2.76.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.49.0",
+    "svelte-preprocess": "^4.10.7",
     "ts-loader": "^9.3.0",
+    "typescript": "^4.7.2",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "@vscode/test-electron": "^2.1.3"
+    "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "lit": "^2.2.7"
   }
 }
